fix: align app version visuals with style update

--- a/src/pages/AppVersion/index.less
+++ b/src/pages/AppVersion/index.less
@@ -1052,7 +1052,7 @@
 }
 
 .detailUpdatedComponentList :global(.ant-collapse-header) {
-  padding: 0 36px 0 0 !important;
+  padding: 0 !important;
 }
 
 .detailUpdatedComponentList :global(.ant-collapse-content-box) {
